--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "ejs": "^3.1.9",
+    "csv-stringify": "^6.4.6",
+    "csv-writer": "^1.6.0",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
