--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cookie-parser": "^1.4.6",
     "csv-stringify": "^6.4.6",
     "csv-writer": "^1.6.0",
+    "csvtojson": "^2.0.10",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "html-pdf": "^3.0.1",
